--- a/style.css
+++ b/style.css
@@ -150,8 +150,22 @@ h1 {
   border-radius: 50%;
   color: #0C7BD0;
 }
-
-
+.bouton {
+  display: flex;
+  border: 2px solid white;
+  padding: 12px 175px;
+  border-radius: 30px;
+  color: white;
+  text-decoration: none;
+}
+.bouton {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  flex: 1;
+  padding: 15px;
+}
 
 /*************************************************/
 /***** Section du burger avec sa description *****/
