--- a/style.css
+++ b/style.css
@@ -112,6 +112,15 @@ background-attachment: fixed;
   width: 100%;
   height: 800px;
 }
+.green {
+  body {
+color:black;
+background-color:white;
+background-image:url(images/image_de_fond.png);
+margin:0;
+background-attachment:fixed;
+}
+}
 h1 {
   font-size: 48px;
   color: white;
